# exile

./: .gitignore  docker-compose.yaml
control_plane/: Dockerfile.health-service  Dockerfile.node-registry  go.mod  go.sum
control_plane/cmd/health-service/: main.go
control_plane/cmd/node-registry/: main.go
control_plane/cmd/policy-engine/: main.go
control_plane/cmd/workload-manager/: main.go
control_plane/internal/health/: service.go
control_plane/internal/messaging/: nats.go
control_plane/internal/registry/: models.go  service.go
control_plane/internal/storage/: storage.go
control_plane/internal/workload/: models.go  service.go
docs/infrastructure/: datacenter_requirements.md
infrastructure/database/: schema.sql
infrastructure/mining/: haproxy.cfg  xmrig-proxy.json
infrastructure/nats/: nats.conf
infrastructure/network/: firewall_rules.yaml  vlans.yaml
infrastructure/nomad/: server.hcl
infrastructure/nomad/policies/: placement.sentinel
infrastructure/security/: vault_config.hcl  wireguard.conf.template
node_agent/: Cargo.toml  build.rs
node_agent/src/: main.rs
node_agent/src/adapters/: linux.rs  macos.rs  mod.rs  windows.rs
node_agent/src/config/: mod.rs
node_agent/src/heartbeat/: mod.rs
node_agent/src/registry/: mod.rs
node_agent/src/vault/: mod.rs
node_agent/src/workload/: mod.rs
scripts/: register_echo.sh  register_xmrig.sh  register_xmrig_v2.sh  setup_pki.sh  setup_vault_mining.sh
shared_protocol/: registry.proto  workload.proto
