[package]
name = "node_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tonic = { version = "0.12", features = ["tls", "transport"] }
prost = "0.13"
prost-types = "0.13"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = { version = "0.31", features = ["component", "disk", "system"] }
async-trait = "0.1"
futures-util = "0.3"
nix = { version = "0.29", features = ["signal", "process"] }
hostname = "0.4"

[build-dependencies]
tonic-build = "0.12"
